# kde-wine-helper

./: .gitignore  CMakeLists.txt  Config.h  Notifier.cpp  Notifier.h  PathUtil.cpp  PathUtil.h  README.md  XWindowListener.cpp  XWindowListener.h  config.json  kde-wine-helper.desktop  main.cpp
package/: PKGBUILD
